Finished DocumentServiceTest